--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 * {
 	margin: 0;
 	padding: 0;
@@ -5,8 +7,7 @@
 }
 
 body {
-	font-family: "SF Pro Text", "Myriad Set Pro", "SF Pro Icons",
-		"Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: 'Roboto', sans-serif;
 }
 
 
